# praktika

./: .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
backend/: CMakeLists.txt
backend/src/: main.cpp
docker/: nginx.conf
frontend/: index.html
sql/: init.sql
tests/: CMakeLists.txt  Dockerfile.tests  run_tests.cpp
